# easpanel

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  acinclude.m4  configure.ac  easpanel.spec.in  link_common.sh
conf/: Makefile.am  alert-sample.conf  easpanel-sample.conf  rlm_easpanel-sample.conf
helpers/: Makefile.am
icons/: Makefile.am  easpanel-22x22.xpm
snd/: Makefile.am
src/: Makefile.am
src/common/: Makefile.am  alert.cpp  alert.h  cmdswitch.cpp  cmdswitch.h  config.cpp  config.h  profile.cpp  profile.h
src/easp/: Makefile.am  alertbutton.cpp  alertbutton.h  alerttextedit.cpp  alerttextedit.h  easp.cpp  easp.h  modebutton.cpp  modebutton.h
src/pypad_easpanel/: Makefile.am  pypad_easpanel.exemplar  pypad_easpanel.py
src/rlm_easpanel/: Makefile.am  rlm_easpanel.c
src/tests/: Makefile.am  test_alert_manifest.cpp  test_alert_manifest.h
xdg/: Makefile.am  easpanel.desktop
